src/test/ui/hrtb/hrtb-just-for-static.nll.stderr
error: higher-ranked subtype error
  --> $DIR/hrtb-just-for-static.rs:24:5
   |
LL |     want_hrtb::<StaticInt>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: lifetime may not live long enough
  --> $DIR/hrtb-just-for-static.rs:30:5
   |
LL | fn give_some<'a>() {
   |              -- lifetime `'a` defined here
LL |     want_hrtb::<&'a u32>()
   |     ^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`
   |
   = help: consider replacing `'a` with `'static`

error: higher-ranked subtype error
  --> $DIR/hrtb-just-for-static.rs:30:5
   |
LL |     want_hrtb::<&'a u32>()
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

